--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="DisEmoteRipper.MainWindow"
+﻿<Window x:Class="DisRipper.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:DisEmoteRipper"
+        xmlns:local="clr-namespace:DisRipper"
         mc:Ignorable="d"
         Title="MainWindow" Height="490" Width="1300" Closing="Window_Closing">
     <Grid>
