--- a/EmoteWindow.xaml
+++ b/EmoteWindow.xaml
@@ -22,8 +22,8 @@
                     <ProgressBar x:Name="GuildProgress" HorizontalAlignment="Left" Height="10" Width="100"/>
                     <Label x:Name="GuildLabel" Content="Servers (0)" HorizontalAlignment="Left" VerticalAlignment="Top"/>
                 </StackPanel>
-                <Button x:Name="DownloadButton" Content=" Download " HorizontalAlignment="Left" Click="DownloadButton_Click"/>
-                <Button x:Name="TestButton" Content=" test " Click="TestButton_Click" MaxWidth="50" HorizontalAlignment="Left" Visibility="Visible"/>
+                <Button x:Name="ExportButton" Content=" Export " HorizontalAlignment="Left" Click="ExportButton_Click"/>
+                <Button x:Name="TestButton" Content=" test " Click="TestButton_Click" MaxWidth="50" HorizontalAlignment="Left" Visibility="Hidden"/>
             </StackPanel>
 
         </Grid>
